[package]
name = "macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
crossbeam-queue = "0.3.8"
device_query = "1.1.3"
enigo = "0.1.2"
lazy_static = "1.4.0"
serde = { version = "1.0.163", features = ["derive"] }
# serde_json is just for the example, not required in general
serde_json = "1.0"
